# strud

./: Cargo.toml  Makefile  README.md  SPEC.md
assets/: strud.toml  template.md
conf/: 2026-07-12.md  README.md  strud.toml
src/: config.rs  diary.rs  entry.rs  main.rs  parse.rs  template.rs  validate.rs
src/commands/: init.rs  list.rs  mod.rs  new.rs
