[package]
name = "strud"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
dialoguer = "0.11"
handlebars = "6"